[package]
name = "geyser_neon"
version = "1.0.0"
edition = "2021"
description = "Neon geyser plugin"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bs58 = "0.4.0"
flume = "0.10.14"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
fast_log = { version = "1.5.54" }
serde = "1.0.154"
serde_derive = "1.0.154"
serde_json = "1.0.94"
solana-geyser-plugin-interface = { version = "=1.14.14" }
solana-logger = { version = "=1.14.14" }
solana-measure = { version = "=1.14.14" }
solana-metrics = { version = "=1.14.14" }
solana-runtime = { version = "=1.14.14" }
solana-sdk = { version = "=1.14.14" }
tokio = { version = "1.26.0", features = ["full"] }
kafka_common = { path = "../kafka_common" }
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl", "sasl" , "zstd", "libz-static"] }
blake3 = "1.3.3"
build-info = { version = "0.0.29" }
prometheus-client = "0.19.0"
hyper = { version = "0.14.24", features = ["server", "http1", "tcp"] }
ahash = { version = "0.8.3", features = ["serde"] }
anyhow = "1.0.69"

[dependencies.notify]
version = "5.1.0"
optional = true

[build-dependencies]
build-info-build = { version = "0.0.29" }

[features]
default = ["filter"]
filter = ["notify"]
