[package]
name = "kafka_common"
version = "0.1.0"
edition = "2021"
description = "Neon geyser plugin common structs"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.14.14" }
solana-sdk = { version = "=1.14.14" }
solana-transaction-status = {version = "=1.14.14" }
solana-program = { version = "=1.14.14"}
solana-account-decoder= { version = "=1.14.14" }

chrono = "0.4.23"
serde = "1.0.152"
serde_with = "2.2.0"
serde_derive = "1.0.152"
blake3 = "1.3.3"
