[package]
name = "kafka_common"
version = "0.1.0"
edition = "2021"
description = "Neon geyser plugin common structs"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
solana-geyser-plugin-interface = { version = "=1.14.14" }
solana-sdk = { version = "=1.14.14" }
solana-transaction-status = {version = "=1.14.14" }
solana-program = { version = "=1.14.14"}
solana-account-decoder= { version = "=1.14.14" }

chrono = "0.4.24"
serde = "1.0.159"
serde_with = "2.3.2"
serde_derive = "1.0.159"
blake3 = "1.3.3"
anyhow = "1.0.70"
